--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dev_dependencies:
   location: ^4.2.0
   firebase_core: ^1.7.0
   firebase_auth: ^3.1.3
+  google_sign_in: ^5.2.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
